--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="#">Cadastrar</a></li>
+                            <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">Cadastrar</a></li>
                         </ul>
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
-                    <button class="btn btn-outline-success" type="submit">
+                    <button class="btn btn-outline-success" type="submit">  
                         <i class="bi bi-search"></i>
                     </button>
                 </form>
@@ -58,46 +58,9 @@
             <i class="bi bi-plus-lg"></i>
             Cadastrar Tarefa
         </button>
-        <div class="row mt-3">
-            <div class="col-lg-3 col-md-6 col-12">
-                <div class="card">
-                    <div class="card-header">
-                        Estudar para o CP
-                    </div>
-                    <div class="card-body">
-                        <p class="card-text">Fazer os exercícios para estudar</p>
-                        <p>
-                            <span class="badge text-bg-danger">Estudos</span>
-                        </p>
-                        <a href="#" class="btn btn-success" title="Marcar como concluída">
-                            <i class="bi bi-check-lg"></i>
-                        </a>
-                        <a href="#" class="btn btn-danger" title="Apagar tarefa">
-                            <i class="bi bi-trash"></i>
-                        </a>
-                    </div>
-                </div> <!-- Card -->
-            </div> <!-- Coluna -->
-            <div class="col-lg-3 col-md-6 col-12">
-                <div class="card">
-                    <div class="card-header">
-                        Estudar para o CP
-                    </div>
-                    <div class="card-body">
-                        <p class="card-text">Fazer os exercícios para estudar</p>
-                        <p>
-                            <span class="badge text-bg-danger">Estudos</span>
-                        </p>
-                        <a href="#" class="btn btn-success" title="Marcar como concluída">
-                            <i class="bi bi-check-lg"></i>
-                        </a>
-                        <a href="#" class="btn btn-danger" title="Apagar tarefa">
-                            <i class="bi bi-trash"></i>
-                        </a>
-                    </div>
-                </div> <!-- Card -->
-            </div> <!-- Coluna -->
-        </div> <!-- Final da linha -->
+        <div class="row mt-3" id="tarefas">
+
+        </div> <!-- Final da linha SPA -->
     </div> <!-- Container -->
 
     <!-- Modal -->
@@ -119,18 +82,19 @@
                             <input type="text" class="form-control" id="descricao">
                         </div>
                         <div class="mb-3">
-                            <select class="form-select" aria-label="Categoria">
+                            <label for="categoria" class="form-label">Categoria</label>
+                            <select class="form-select" aria-label="Categoria" id="categoria">
                                 <option selected>Selecione uma categoria</option>
-                                <option value="1">Estudos</option>
-                                <option value="2">Trabalho</option>
-                                <option value="3">Pessoal</option>
+                                <option>Estudos</option>
+                                <option>Trabalho</option>
+                                <option>Pessoal</option>
                             </select>
                         </div>
                     </form>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-                    <button type="button" class="btn btn-primary">Salvar</button>
+                    <button type="button" class="btn btn-primary" id="salvar">Salvar</button>
                 </div>
             </div>
         </div>
@@ -138,6 +102,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
+    <script src="./crud.js"></script>
 </body>
 
 </html>
