--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
+                    <input id="busca" class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
                     <button class="btn btn-outline-success" type="submit">  
                         <i class="bi bi-search"></i>
                     </button>
